--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,1 @@
-<div class="container">
-  <div class="d-flex justify-content-center align-items-center" style="min-height: 80vh;">
-    <h1>Hello World</h1>
-  </div>
-</div>
+<%= render 'shared/product_mockup' %>
